# iPlant

./: .gitignore  LICENSE  platformio.ini
enviro_monitor/: .gitignore  platformio.ini
enviro_monitor/include/: config.hpp
enviro_monitor/lib/ads1115/: ADS_Sensor.cpp  ADS_Sensor.hpp
enviro_monitor/src/: TEST_BME280.cpp
enviro_monitor/test/: TEST_BME280.cpp  TEST_VEML7700.cpp  TEST_cam2.cpp
lib/ads1115/: ADS_Sensor.cpp
picam/: .gitignore  README.md  example_config .json  pyproject.toml
picam/src/: BME280.py  TEST_main.py  main.py
picam/tests/: TEST_email2.py  TEST_imgWrite.py  TEST_preview.py  TEST_still.py  TEST_timestamp.py
picam/util/: capture.py  controls.py  preview.py
picamera/: .gitignore  example_config .json  pyproject.toml
picamera/src/: main.py
picamera/tests/: TEST_camera_properties.py  TEST_cfg  TEST_convert_to_video.py  TEST_cron.py  TEST_email.py  TEST_email2.py  TEST_main.py  TEST_still.py  TEST_video.py
picamera/util/: format.py  metadata.py  tuning.py
src/: TEST_cam.cpp  config.hpp  main.cpp
test/: TEST_cam.cpp
