[project]
name = "uv-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "picamera2>=0.3.23",
    "pytest>=8.3.3",
    "pytz>=2024.2",
    "schedule>=1.2.2",
    "smbus2>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
